2011-04-11  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el (bbdb-complete-mail): Ensure initialization of
	the database.

2011-04-10  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-utilities-anniv): New customization group.
	(bbdb-create-hook, bbdb-change-hook)
	(bbdb-after-change-hook, bbdb-notice-hook)
	(bbdb-default-separator): Improve doc string.
	(bbdb-separator-alist): Improve doc string.  Include entries for
	anniversaries.
	(bbdb-records):  Use make-variable-buffer-local.
	(bbdb-current-field):  Do not remove field-name.
	(bbdb-record-note): Simplified.
	(bbdb-record-note-n): Removed.
	(bbdb-record-note-split): New function.
	(bbdb-record-set-note): Improved documentation.
	(bbdb-format-note, bbdb-record-format-note): New function.
	(bbdb-display-text):  Renamed from bbdb-format-text.
	(bbdb-display-list):  Renamed from bbdb-format-list.
	(bbdb-display-name-organization): Renamed from
	bbdb-format-name-organization.
	(bbdb-display-record-one-line): Renamed from
	bbdb-format-record-one-line.  Unify text properties.
	(bbdb-display-record-multi-line): Renamed from
	bbdb-format-record-multi-line.  Unify text properties.
	(bbdb-display-record-full-multi-line): Renamed from
	bbdb-format-record-full-multi-line.
	(bbdb-display-record-pop-up-multi-line): Renamed from
	bbdb-format-record-pop-up-multi-line.
	(bbdb-display-record): Renamed from bbdb-format-record.
	(bbdb-parse-internal, bbdb-parse-frobnicate): Simplified search
	for first record.
	(bbdb-delete-record-internal, bbdb-overwrite-record-internal):
	Disentangle code.

	* lisp/bbdb-com.el (bbdb-editable): Throw error if *BBDB* buffer
	is out of sync with database.
	(bbdb-search): Use suffix -re for all args that are regular
	expressions.
	(bbdb-delete-duplicate-mails, bbdb-sort-addresses)
	(bbdb-sort-phones, bbdb-sort-notes): New optional arg update.
	(bbdb-record-edit-note): Renamed from bbdb-record-edit-notes.
	(bbdb-list-transpose, bbdb-ident-point): New functions.