@@ -64,7 +64,7 @@
   (defvar gnus-article-buffer)) ;; gnus-art.el
 
 (defconst bbdb-version "3.02")
-(defconst bbdb-version-date "$Date: 2011/04/09 15:23:36 $")
+(defconst bbdb-version-date "$Date: 2011/04/11 15:06:11 $")
 
 ;; Custom groups
 
@@ -201,7 +201,25 @@ If this file is newer than `bbdb-file', BBDB will offer to revert."
   :group 'bbdb
   :type 'hook)
 
-(defcustom bbdb-create-hook 'bbdb-creation-date
+;; The default element of `bbdb-create-hook' is `bbdb-creation-date'.
+;; The default element of `bbdb-change-hook' is `bbdb-timestamp'.
+;; -- We have a problem here:
+;; Usually, hook variables are not set, but functions are added
+;; by calling `add-hook' and removed by calling `remove-hook'.
+;; If the user calls `add-hook' in the init file (usually before loading
+;; the package that defines the hook variable), this also initializes
+;; the respective hook variable.  Yet this collides with a non-nil
+;; default value of a hook variable because a non-nil INITVALUE for `defvar'
+;; or `defcustom' has no effect if a variable is already bound.
+;; Therefore, the following code calls `add-hook' unconditionally.
+;; Yet this is not a perfect solution either.  If the user wants to remove
+;; the default functions from the respective hooks, the current solution
+;; requires that he or she calls `remove-hook' *after* loading bbdb.el.
+;; However, it is probably more likely that users call `add-hook' on these
+;; variables in their init files than calling `remove-hook'.  In that
+;; sense, the following should work for most people.
+;; Nonetheless, suggestions for better solutions are appreciated!
+(defcustom bbdb-create-hook nil
   "Hook run each time a new BBDB record is created.
 Run with one argument, the new record.  This is called before the record is
 added to the database.  followed by a call of `bbdb-change-hook'.
@@ -211,14 +229,16 @@ can use the variable `bbdb-update-records-address' to determine the header
 and class of the mail address according to `bbdb-message-headers'."
   :group 'bbdb
   :type 'hook)
+(add-hook 'bbdb-create-hook 'bbdb-creation-date)
 
-(defcustom bbdb-change-hook 'bbdb-timestamp
+(defcustom bbdb-change-hook nil
   "Hook run each time a BBDB record is changed.
 Run with one argument, the record.  This is called before the database
 is modified.  If a new bbdb record is created, `bbdb-create-hook' is called
 first, followed by a call of this hook."
   :group 'bbdb
   :type 'hook)
+(add-hook 'bbdb-change-hook 'bbdb-timestamp)
 
 (defcustom bbdb-time-stamp-format "%Y-%m-%d %T"
   "The BBDB time stamp format.  See `format-time-string'.
